fix nightvision key name. remove redundant code. slightly reorganize functions. title cells with creature name and stat type

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
         <meta charset="utf-8">
         <title>COS Stat List</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=0.5" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5" />
         <link rel="manifest" href="../manifest.json" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
@@ -83,7 +83,7 @@
 
         <div id="floatingWindow" style="position:relative;width: max-content;max-width:75vw;height: 50vh;background-color:white;display: none;overflow:scroll;border:gray solid 1px;">
             <img class="clickableButton" tabindex="0" style="z-index: 2; border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit"/>
-            <input type="search" id="floatingWindowSearchBar" placeholder="Search...">
+            <input aria-description="Search Stat Types" type="search" id="floatingWindowSearchBar" placeholder="Search...">
             <table id="floatingWindowTable" style="width: calc(100% - 20px);">
                 <tbody></tbody>
             </table>
