can copy cells with Ctrl + C python script is now legacy. HTML and JS is used to convert the creatureStats lua table now. Add meta descriptions

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
         <meta charset="utf-8">
         <title>COS Stat List</title>
+        <meta name="description" content="Filter and sort creature stats for Creatures of Sonaria">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5" />
         <link rel="manifest" href="../manifest.json" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
