--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Web Playlist Creator</title>
+        <meta name="description" content="Play music in a playlist"/>
         <link rel="icon" href="../Icons/PageFavicon.ico">
         <link rel="manifest" href="../manifest.json" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
