--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Choose Player</title>
+    <meta name="description" content="Choose to play music in a playlist or looper."/>
     <link rel="icon" href="Icons/PageFavicon.ico">
     <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +20,6 @@
   <body>
     <div style="text-align: center;"><h1 style="border:1px solid black; background-color:white; color:black; font-family: Cambria,serif"><a href="HTML/WebLooper.html">Web Looper</a></h1></div>
     <div style="text-align: center;"><h1 style="border:1px solid black; background-color:white; color:black; font-family: Cambria,serif"><a href="HTML/PlaylistCreator.html">Playlist Creator</a></h1></div>
-    <h5 style="text-align: center;"><a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com" target="_blank">Powered by Howler.js</a></h5>
+    <h5 style="text-align: center;"><a id="poweredByText" style="color:black; font-family: Cascadia Code, serif;" href="https://howlerjs.com" target="_blank">Powered by Howler.js</a></h5>
   </body>
 </html>
