--- a/HTML/WebLooper.html
+++ b/HTML/WebLooper.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Web Music Looper</title>
+        <meta name="description" content="Play songs simultaneously in a looper"/>
         <link rel="icon" href="../Icons/PageFavicon.ico">
         <link rel="manifest" href="../manifest.json" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,13 +18,13 @@
     <body>
         <div style="margin-left: auto; margin-right: auto; text-align: center;">
             <h1 style="border:1px solid black; background-color:white">
-                <font style="color:black; font-family: Cambria">Web Looper</font>
+                <span style="color:black; font-family: Cambria, serif">Web Looper</span>
             </h1>
             <h5 style="text-align: center;">
-                <a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com" target="_blank">Powered by Howler.js</a>
+                <a id="poweredByText" style="color:black; font-family: Cascadia Code, serif;" href="https://howlerjs.com" target="_blank">Powered by Howler.js</a>
             </h5>
 
-            <input type="file" style="margin-left:5px; margin-right:5px; width:90px; color:transparent;" multiple=true title="Drag audios here to batch upload them!" id="batchUpload"/>
+            <input type="file" style="margin-left:5px; margin-right:5px; width:90px; color:transparent;" title="Drag audios here to batch upload them!" id="batchUpload" multiple/>
             <label for="batchUpload" style="position: relative; top: 1px;">Add files here to batch upload</label>
         </div>
 
