use new css properties! dialog should now animate properly (on chromium at least, it might be broken on other browsers now lol)

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -181,7 +181,7 @@
             </div>
         </dialog>
 
-        <div id="rightClickContextMenu">
+        <div id="rightClickContextMenu" style="interpolate-size: allow-keywords;">
             <div class="contextOption"></div>
         </div>
     </body>
