add shortcuts to manifest.json

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Choose Player</title>
     <meta name="description" content="Choose to play music in a playlist or looper."/>
     <link rel="icon" href="Icons/PageFavicon.ico">
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
