--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -4,7 +4,7 @@
         <title>Web Playlist Creator</title>
         <meta name="description" content="Play music in a playlist"/>
         <link rel="icon" href="../Icons/PageFavicon.ico">
-        <link rel="manifest" href="../manifest.json" />
+        <link rel="manifest" href="../manifest.webmanifest" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
