WIP Picture-In-Picture (finally)

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -138,16 +138,19 @@
                     <input style="width: 40%; margin-right: 5px;" type="number" value=10 step=1 min=0 id="seekDuration"><label for="seekDuration">Seek Duration: </label><label id="seekDurationDisplay" for="seekDuration">10 sec</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="compactMode"><label for="compactMode">Compact Mode</label>
+                    <label><input type="checkbox" id="compactMode">Compact Mode</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="seekDistanceProportional" checked><label for="seekDistanceProportional">Keep seek distance proportional with play speed</label>
+                    <label><input type="checkbox" id="seekDistanceProportional" checked>Keep seek distance proportional with play speed</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="skipUnplayable" checked><label for="skipUnplayable">Skip files that are unsupported</label>
+                    <label><input type="checkbox" id="skipUnplayable" checked>Skip files that are unsupported</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="reorderFiles"><label for="reorderFiles">Allow reordering files</label>
+                    <label><input type="checkbox" id="reorderFiles">Allow reordering files</label>
+                </div>
+                <div>
+                    <input type="button" id="enterPIP" value="Enter PIP (WIP)">
                 </div>
                 <div style="text-align:left"><a href="../HTML/WebLooper.html">Web Looper</a></div>
             </div>
