WIP Picture-In-Picture (finally) Dialogs now become inert in PIP PIP can now be disabled using same button to enable it fix songs losing track of their current row when unshuffling improve code for file size displays Fix random errors when right-clicking

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -150,7 +150,7 @@
                     <label><input type="checkbox" id="reorderFiles">Allow reordering files</label>
                 </div>
                 <div>
-                    <input type="button" id="enterPIP" value="Enter PIP (WIP)">
+                    <button id="enterPIP"></button>
                 </div>
                 <div style="text-align:left"><a href="../HTML/WebLooper.html">Web Looper</a></div>
             </div>
