--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -28,7 +28,7 @@
         <div style="cursor: pointer;" tabindex="0" class="largerSize songName playingStatus text" id="currentFileName">Upload Files to Begin!</div>
         <img tabindex="0" class="clickableButton" id="settingsButton" data-onRightClick="quickSettings" width=20 height=20 style="float: right;" src="../Icons/SettingsIcon.svg" alt="Settings"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
 
-        <table style="position: absolute; border: 1px solid black; width: calc(100% - 20px); top: calc(40vh - 10ch); transform: translate(0%, 0%); z-index: -2;">
+        <table class="mainTable">
             <tbody>
                 <tr>
                     <td style="white-space: nowrap; height: 10ch;" colspan="5" class="tableBorder">
