changes to main table shifting

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -28,7 +28,7 @@
         <div style="cursor: pointer;" tabindex="0" class="largerSize songName playingStatus text" id="currentFileName">Upload Files to Begin!</div>
         <img tabindex="0" class="clickableButton" id="settingsButton" data-onRightClick="quickSettings" width=20 height=20 style="float: right;" src="../Icons/SettingsIcon.svg" alt="Settings"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
 
-        <table class="mainTable">
+        <table class="mainTable" style="--moveDown: 30vh;">
             <tbody>
                 <tr>
                     <td style="white-space: nowrap; height: 10ch;" colspan="5" class="tableBorder">
