loading gray screen now appears when modifying table in cos stat list. loading gray screen implemented in PlaylistCreator, but commented out (I don't like it that much). Update creatureStats.json and add new abilities.

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -19,7 +19,8 @@
 
     </head>
     <body>
-        <div id="dragOverDisplay" class="hoverToDrop"><div style="position: fixed; top: 50vh; left: 50vw; transform: translate(-50%, -50%);" class="text" ><b>Drop Here to add Music</b></div></div>
+        <div id="loadingGray"></div>
+        <div id="dragOverDisplay"><div style="position: fixed; top: 50vh; left: 50vw; transform: translate(-50%, -50%);" class="text" ><b>Drop Here to add Music</b></div></div>
         <div style="z-index: -2; background-color: lightgrey; width: max-content; margin-top: 20px; left: -9999px; position: absolute; pointer-events: none;" id="hoveredTimeDisplay"><div style="margin-left:1ch; margin-right:1ch; color: black;" class="prevent-select text"></div></div>
 
         <input accept="audio/*" type="file" style="display: none;" id="0input" multiple>
