--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -11,6 +11,24 @@
         <script src="cosStatList.js" defer></script>
         
         <style>
+            #loadingGray{
+                background-color: rgba(30, 30, 30, 0.1);
+                opacity: 0;
+                pointer-events: none;
+                position: fixed;
+                width: 200vw;
+                height: 200vh;
+                top: 50vh;
+                left: 50vw;
+                z-index: 15;
+                transition: opacity 50ms;
+                transform: translate(-50%, -50%);
+            }
+            #loadingGray[enable]{
+                opacity: 1;
+                cursor: wait;
+                pointer-events: all;
+            }
             .clickableButton{
                 position: relative;
                 z-index: 0;
@@ -60,6 +78,8 @@
         </style>
     </head>
     <body>
+        <div id="loadingGray"></div>
+
         <div style="border: 1px solid black; margin-bottom: 15px;">
             <p style="font-weight: bold; margin: 0;">Filters</p>
             <div id="filterConfigurations">
