--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -64,6 +64,7 @@
                 scrollbar-width: none;/*thin;*/
                 user-select: none;
                 cursor: cell;
+                background-color: white;
             }
             .creatureStatCell{
                 max-width: 25ch;
@@ -93,7 +94,7 @@
 
         <button id="addStatTypesButton">Configure stat types</button>
         <table id="statList" tabindex="0">
-            <thead>
+            <thead style="top: 0px; position: sticky;">
                 <tr>
                 </tr>
             </thead>
@@ -105,7 +106,7 @@
         <noscript style="font-family: serif; font-size: x-large;">YOU MUST ENABLE JAVASCRIPT FOR THIS WEBSITE TO WORK!!!!!</noscript>
 
         <div id="floatingWindow" style="position:relative;width: max-content;max-width:75vw;height: 50vh;background-color:white;display: none;overflow:scroll;border:gray solid 1px;">
-            <img class="clickableButton" decoding="async" loading="lazy" tabindex="0" style="z-index: 2; border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit"/>
+            <img class="clickableButton" decoding="async" loading="lazy" tabindex="0" style="z-index: 2; border-radius: 8px; float: right; width: 20px; height: 20px; top: 0px; position:sticky;" src="../Icons/CancelIcon.svg" alt="Exit"/>
             <input autocomplete="off" name="Search Stats" aria-description="Search Stat Types" type="search" id="floatingWindowSearchBar" placeholder="Search...">
             <table id="floatingWindowTable" style="width: calc(100% - 20px);">
                 <tbody></tbody>
