Screen waits a bit before darkening Name stat cannot be disabled and now pins to the left-side of the screen (planning on not adding a small settings dialog)

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -103,7 +103,7 @@
 
         <button id="addStatTypesButton">Configure stat types</button>
         <table id="statList" tabindex="0">
-            <thead style="top: 0px; position: sticky;">
+            <thead style="position: sticky; top: 0px; z-index: 1;">
                 <tr>
                 </tr>
             </thead>
