give checkboxes name values to remove annoying warnings song rows are now handled much better, and they now use flex boxes to ensure the UI fits the best on all screens

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -53,6 +53,9 @@
                 /* table-layout: fixed;
                 width: 100%; */
             }
+            /*#statList > tbody > tr:nth-child(odd){*/
+            /*    background-color: #ebebeb;*/
+            /*}*/
             .creatureTableRow{
                 text-align: center;
                 text-wrap: nowrap;
