--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -26,7 +26,7 @@
         <input accept="audio/*" type="file" style="display: none;" id="0input" multiple>
         <input accept="audio/*" type="file" style="display: none;" id="inputDirectory" multiple webkitdirectory>
         <label for="0input"><img id="uploadFilesLabel" class="clickableButton" tabindex="0" data-onRightClick="uploadFileMenu" src="../Icons/UploadIcon.svg" width=20 height=20 alt=""/></label> <!--https://commons.wikimedia.org/wiki/File:OOjs_UI_icon_upload.svg-->
-        <div style="cursor: pointer; width: 50%;" tabindex="0" class="largerSize songName playingStatus text" id="currentFileName">Upload Files to Begin!</div>
+        <div style="cursor: pointer; width: 50%;" tabindex="0" class="largerSize scrollableText playingStatus text" id="currentFileName">Upload Files to Begin!</div>
         <img tabindex="0" class="clickableButton" id="settingsButton" data-onRightClick="quickSettings" width=20 height=20 style="float: right;" src="../Icons/SettingsIcon.svg" alt="Settings"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
 
         <table class="mainTable" style="--moveDown: 30vh;">
@@ -131,7 +131,7 @@
                     </select>
                 </div>
                 <div>
-                    <div class="largerSize songName text" style="display: block;" title="Preload Songs Distance (# of songs before and after current song are preloaded (RAM INTENSIVE)):">Preload Songs Distance (# of songs before and after current song are preloaded (RAM INTENSIVE)):</div>
+                    <div class="largerSize scrollableText text" style="display: block;" title="Preload Songs Distance (# of songs before and after current song are preloaded (RAM INTENSIVE)):">Preload Songs Distance (# of songs before and after current song are preloaded (RAM INTENSIVE)):</div>
                     <input type="range" id="preloadDistance" max=1 min=0 value=1 step=1 style="width: 75%; display: inline-block; position: relative; top: -4px; transform: translate(0%, 50%);">
                     <label for="preloadDistance" style="display: inline-block;">Value: 1</label>
                 </div>
@@ -146,6 +146,9 @@
                 </div>
                 <div>
                     <label><input type="checkbox" id="skipUnplayable" checked>Skip files that are unsupported</label>
+                </div>
+                <div>
+                    <label><input type="checkbox" id="showLengths" checked>Display Song Durations (high disc usage)</label>
                 </div>
                 <div>
                     <label><input type="checkbox" id="reorderFiles">Allow reordering files</label>
