--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -25,9 +25,11 @@
 
         <input accept="audio/*" type="file" style="display: none;" id="0input" multiple>
         <input accept="audio/*" type="file" style="display: none;" id="inputDirectory" multiple webkitdirectory>
-        <label for="0input"><img id="uploadFilesLabel" class="clickableButton" tabindex="0" data-onRightClick="uploadFileMenu" src="../Icons/UploadIcon.svg" width=20 height=20 alt=""/></label> <!--https://commons.wikimedia.org/wiki/File:OOjs_UI_icon_upload.svg-->
-        <div style="cursor: pointer; width: 50%;" tabindex="0" class="largerSize scrollableText playingStatus text" id="currentFileName">Upload Files to Begin!</div>
-        <img tabindex="0" class="clickableButton" id="settingsButton" data-onRightClick="quickSettings" width=20 height=20 style="float: right;" src="../Icons/SettingsIcon.svg" alt="Settings"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
+        <div style="display: flex">
+            <label for="0input"><img id="uploadFilesLabel" class="clickableButton" tabindex="0" data-onRightClick="uploadFileMenu" src="../Icons/UploadIcon.svg" width=20 height=20 alt=""/></label> <!--https://commons.wikimedia.org/wiki/File:OOjs_UI_icon_upload.svg-->
+            <div style="cursor: pointer; flex: 0 1 auto;" tabindex="0" class="scrollableText playingStatus text" id="currentFileName">Upload Files to Begin!</div>
+            <img tabindex="0" class="clickableButton" id="settingsButton" data-onRightClick="quickSettings" width=20 height=20 style="margin-left: auto;" src="../Icons/SettingsIcon.svg" alt="Settings"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
+        </div>
 
         <table class="mainTable" style="--moveDown: 30vh;">
             <tbody>
