song seek display now changes with song rate if seek distance proportional is enabled.

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -11,12 +11,11 @@
         <script defer src="../Javascript/PlaylistCreator.js"></script>
         <!-- <script defer src="../howler.js"></script> -->
         <!-- <script src="../ServiceWorker.js"></script> -->
+        <link rel="preload" as="image" imagesrcset="../Icons/RepeatIcon.svg" href="../CSS/PlaylistCreator.css">
+        <link rel="preload" as="image" imagesrcset="../Icons/Repeat1Icon.svg" href="../CSS/PlaylistCreator.css">
         <link rel="stylesheet" href="../CSS/PlaylistCreator.css">
         <!-- <link rel="stylesheet" id="compactModeStyleLink" href="../CSS/CompactMode.css" disabled> -->
         <link rel="stylesheet" href="../CSS/background.css">
-        <link rel="prefetch" href="../Icons/RepeatIcon.svg" as="image">
-        <link rel="prefetch" href="../Icons/Repeat1Icon.svg" as="image">
-
     </head>
     <body>
         <div id="loadingGray"></div>
