dates are now selected using a calendar and placeholder text for filters is more useful add type="button" to all the buttons deleting a filter now closes the choose stat menu associated with that filter

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -98,12 +98,12 @@
 
             </div>
             <div>
-                <button id="applyFilters">Submit Filter Changes</button>
-                <button id="createFilter">Add Filter</button>
+                <button id="applyFilters" type="button">Submit Filter Changes</button>
+                <button id="createFilter" type="button">Add Filter</button>
             </div>
         </div>
 
-        <button id="addStatTypesButton">Configure stat types</button>
+        <button id="addStatTypesButton" type="button">Configure stat types</button>
         <table id="statList" tabindex="0">
             <thead style="position: sticky; top: 0px; z-index: 1;">
                 <tr>
