--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -155,7 +155,7 @@
                     <label><input type="checkbox" id="reorderFiles">Allow reordering files</label>
                 </div>
                 <div>
-                    <button id="enterPIP"></button>
+                    <button id="enterPIP" type="button"></button>
                 </div>
                 <div style="text-align:left"><a href="../HTML/WebLooper.html">Web Looper</a></div>
             </div>
