try to improve loading font on mobile

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -113,7 +113,7 @@
             </tbody>
         </table>
 
-        <p style="font-family: cursive, serif; cursor: inherit;" id="loadingText">LOADING SCRIPTS...</p>
+        <p style="font-family: cursive, serif;font-weight: 500;cursor: inherit;" id="loadingText">LOADING SCRIPTS...</p>
         <noscript style="font-family: serif; font-size: x-large;">YOU MUST ENABLE JAVASCRIPT FOR THIS WEBSITE TO WORK!!!!!</noscript>
 
         <div id="floatingWindow" style="position:relative;width: max-content;max-width:75vw;height: 50vh;background-color:white;display: none;overflow:scroll;border:gray solid 1px;">
