--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -97,7 +97,7 @@
                             <!-- <img  src="../Icons/SpeakerIcon.svg" alt="Volume Changer & Mute Button"/> -->
                             <svg style="width:50%; height:50%; position: relative; left:50%; transform: translate(-50%, 0%)" xmlns="http://www.w3.org/2000/svg" version="1.0" width="500" height="500" viewBox="0 0 75 75"><path d="M39.389,13.769 L22.235,28.606 L6,28.606 L6,47.699 L21.989,47.699 L39.389,62.75 L39.389,13.769z" style="stroke-width:5;stroke-linejoin:round;"/><path d="M48,27.6a19.5,19.5 0 0 1 0,21.4M55.1,20.5a30,30 0 0 1 0,35.6M61.6,14a38.8,38.8 0 0 1 0,48.6" style="fill: none;stroke-width:5;stroke-linecap:round"/></svg>
                             <div tabindex="0" class="pullsOpen" style="visibility: visible; position: absolute; width: 100%; height: 100%; bottom: 50%; transform: translate(0, 50%);">
-                                <div>
+                                <div data-onRightClick="volumeBoost">
                                     <input type="range" id="0playVolume" list='commonVolumesAndRates' max=1 min=0 value=1 step=0.01 style="writing-mode: vertical-lr; direction: rtl; width: 100%; height: 100%; max-height: 50%; top: calc(25% - 2px); left: 50%; transform: translate(-50%, -50%); position: absolute;" />
                                     <label for="0playVolume" style="color: black;">100%</label>
                                 </div>
@@ -119,7 +119,7 @@
             </tbody>
         </table>
 
-        <datalist style="display: none" id="commonVolumesAndRates"><option value="0"></option><option value="0.25"></option><option value="0.5"></option><option value="0.75"></option><option value="1"></option><option value="1.25"></option><option value="1.5"></option><option value="1.75"></option><option value="2"></option></datalist>
+        <datalist style="display: none" id="commonVolumesAndRates"><option value="0"></option><option value="0.25"></option><option value="0.5"></option><option value="0.75"></option><option value="1"></option><option value="1.25"></option><option value="1.5"></option><option value="1.75"></option><option value="2"></option><option value="2.5"></option><option value="3"></option><option value="3.5"></option><option value="4"></option><option value="4.5"></option><option value="5"></option><option value="5.5"></option><option value="6"></option><option value="6.5"></option><option value="7"></option><option value="7.5"></option><option value="8"></option><option value="8.5"></option><option value="9"></option><option value="9.5"></option><option value="10"></option></datalist>
         <datalist style="display: none" id="commonPanValues"><option value="-1"></option><option value="-0.5"></option><option value="0"></option><option value="0.5"></option><option value="1"></option></datalist>
         
         <dialog id="settingsPage" inert>
