stat table is now invisible until it loads entirely

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -104,7 +104,7 @@
         </div>
 
         <button id="addStatTypesButton" type="button">Configure stat types</button>
-        <table id="statList" tabindex="0">
+        <table id="statList" tabindex="0" style="display: none">
             <thead style="position: sticky; top: 0px; z-index: 1;">
                 <tr>
                 </tr>
