--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -149,7 +149,7 @@
                     <label><input type="checkbox" id="skipUnplayable" checked>Skip files that are unsupported</label>
                 </div>
                 <div>
-                    <label><input type="checkbox" id="showLengths" checked>Display Song Durations (high disc usage)</label>
+                    <label><input type="checkbox" id="showLengths" checked>Display Song Durations</label>
                 </div>
                 <div>
                     <label><input type="checkbox" id="reorderFiles">Allow reordering files</label>
