remove debuggin elements resize main play button

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -59,7 +59,7 @@
                                 <div id="seekBack" tabindex="0" class="cell clickableButton tableBorder" style="width: calc(100% / 5); max-width: 270px;">
                                     <img class="playBackIcon" width="60" height="30" style="width:100%; height:100%" src="../Icons/SeekIcon.svg" alt="Seek Backwards"/>
                                 </div>
-                                <div tabindex="0" class="cell clickableButton tableBorder" style="width: calc(100% / 5); max-width: 270px;">
+                                <div tabindex="0" class="cell clickableButton tableBorder" style="width: calc(100% / 5); max-width: 270px; display: flex; flex-wrap: wrap;">
                                     <label for="playpause" class="clickableButton">
                                         <input type="checkbox" id="playpause" style="display: none"/>
                                     </label>
