make progress bar look the same on mobile. (i might have to make my own custom progress bar. the html 5 one behaves oddly.)

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -35,7 +35,7 @@
                         <div style="height: 100%; margin-left: auto; margin-right: auto; text-align: center;">
                             <div class="fileStatus" style="color: black;" id="0status"></div>
                             <div id="firstDurationLabel" style="margin-right: 1ch; color: black;" class="text">00:00</div>
-                            <progress value="0" max="100" id="progress-bar" style="accent-color:white; z-index: 0;"></progress>
+                            <progress value="0" max="100" id="progress-bar"></progress>
                             <div id="secondDurationLabel" style="margin-left: 1ch; color: black;" class="text">00:00</div>
                         </div>
                     </td>
