fix control buttons being cut off by mobile ui

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -42,7 +42,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div style="display: flex; height: 3em; flex-direction: row;">
+                        <div style="display: flex; height: var(--mainTableControlsHeight); flex-direction: row;">
                             <div id="modifiers" style="display: flex; justify-content: flex-start; flex-basis: 20%;">
                                 <label for="repeatButton" style="width: calc(100% / 2); max-width: 225px; height: 100%;" tabindex="0" class="clickableButton tableBorder">
                                     <input type="checkbox" style="display: none;" id="repeatButton" class="repeatButton" title="Activate to repeat the current song indefinitely">
